--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
 .container {
     max-width: 900px;
     width: 100%;
-    height: 900px;
+    /* height: 900px; */
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr;
@@ -21,7 +21,7 @@ body {
     position: relative;
     /* border: 5px solid red; */
 
-    margin: 2em 1em;
+    /* margin: 2em 1em; */
     display: flex;
 }
 .dog-image {
