--- a/index.css
+++ b/index.css
@@ -23,6 +23,7 @@ body {
 
     /* margin: 2em 1em; */
     display: flex;
+    padding-top: 5em;
 }
 .dog-image {
     width: 100%;
@@ -60,7 +61,8 @@ header {
 }
 
 header img {
-    padding:3em 1.5em 1em 1.5em;
+    /* padding:3em 1.5em 1em 1.5em; */
+    padding: 2em 1.5em;
 }
 
 
@@ -68,7 +70,7 @@ header img {
 footer {
     display: flex;
     justify-content: center;
-    padding: 2em 0;
+    padding: 5em 0;
     gap: 1em;
 }
 
