--- a/index.css
+++ b/index.css
@@ -40,8 +40,10 @@ body {
 
 .p1 {
     bottom: 55px;
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 600;
+    margin-left: 0.5em;
+    margin-bottom: 1em;
 }
 
 .p2 {
@@ -49,6 +51,8 @@ body {
     font-weight: 400;
     bottom: 17px;
     color: #B7B7B7;
+    margin-left: 1em;
+    margin-bottom: 1em;
 }
 
 
@@ -57,6 +61,7 @@ header {
     height: 150px;
     justify-content: space-between;
     grid-area: header;
+    padding-top: 5em;
     /* align-content: center; */
 }
 
@@ -113,7 +118,7 @@ footer {
 }
 
 .rec {
-    top: 45px;
+    top: 165px;
     left: 15px;
     position: absolute;
     display: flex;
@@ -121,7 +126,7 @@ footer {
 }
 
 .like,.dislike {
-    width: 173px;
-    height: 90px;
+    width: 220px;
+    height: 110px;
     margin: auto;
 }
