--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ body {
 
     /* margin: 2em 1em; */
     display: flex;
-    padding-top: 5em;
+    padding-top: 2em;
 }
 .dog-image {
     width: 100%;
@@ -61,7 +61,7 @@ header {
     height: 150px;
     justify-content: space-between;
     grid-area: header;
-    padding-top: 5em;
+    padding-top: 2em;
     /* align-content: center; */
 }
 
@@ -83,8 +83,8 @@ footer {
 .ellipse1,.ellipse2 {
     width: 125px;
     height: 125px;
-    /* background-color: white; */
-    background-color: yellow;
+    background-color: white;
+    /* background-color: yellow; */
     margin: 0 1em;
     border-radius: 50%;
     display: flex;
@@ -118,15 +118,15 @@ footer {
 }
 
 .rec {
-    top: 165px;
-    left: 15px;
+    top: 125px;
+    left: 25px;
     position: absolute;
     display: flex;
     transform: rotate(-35deg);
 }
 
 .like,.dislike {
-    width: 220px;
+    width: 250px;
     height: 110px;
     margin: auto;
 }
